fix: twoStateButton: vertical align counter

--- a/src/components/Button/button.module.scss
+++ b/src/components/Button/button.module.scss
@@ -541,6 +541,7 @@
     flex-direction: column;
 
     .column {
+      align-items: center;
       display: flex;
     }
   }
